--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -93,6 +93,8 @@
                         </div>
                     </div>
                 </app-toolbar>
+
+                <div></div> <!--cart component-->
             </div>
             <div data-page="history">
                 <app-toolbar>
