--- a/client/user/src/mealorder/menu/meal-order-vendor-menus.html
+++ b/client/user/src/mealorder/menu/meal-order-vendor-menus.html
@@ -32,7 +32,7 @@
             iron-list {
                 --iron-list-items-container: {
                     width: 70%;
-                    margin: 2% auto;
+                    margin: 2% auto 0 auto;
                     border-bottom: 1px solid var(--paper-grey-300);
                 };
             }
