--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -101,7 +101,7 @@
          * @polymer
          * @appliesMixin MealOrderApp.ReduxMixin
          */
-        class MealOrderMenuContainer extends MealOrderApp.ReduxMixin(Polymer.Element) {
+        class MealOrderMenuContainer extends (Polymer.Element) {
             static get is() {
                 return 'meal-order-menu-container';
             }
@@ -145,75 +145,16 @@
                         type: Array,
                     },
 
+                    /**
+                     * Selected day.
+                     */
                     date: {
                         type: Object,
                     }
                 };
             }
-
-            /*_pageChanged() {
-                if (!this.date) {
-                    this.set('route.path', '/menu/' + this.calendar[0].date.year + "-" +
-                        this.calendar[0].date.month + "-" + this.calendar[0].date.day);
-                }
-                else {
-                    let date = {};
-                    if (this.routeData.page.startsWith("menu")) {
-                        if (!this.routeData.date) {
-                            date = this.selectedDay || this.calendar[0].date;
-                            this.set('route.path', '/menu/' + date.year + "-" +
-                                date.month + "-" + date.day);
-                        }
-                        else {
-                            const routeDate = new Date(this.routeData.date);
-                            date.year = routeDate.getFullYear();
-                            date.month = routeDate.getMonth() + 1;
-                            date.day = routeDate.getDate();
-                            this.set('selectedDay', date);
-                        }
-                        this.dispatch('changeCurrentMenu', date);
-                        this.dispatch('changeCurrentOrder', date);
-                    }
-                }
-            }*/
-
-            /*_pageChanged() {
-                if (!this.date) {
-                    this.set('route.path', '/menu/' + this.calendar[0].date.year + "-" +
-                        this.calendar[0].date.month + "-" + this.calendar[0].date.day);
-                }
-                else {
-                    let date = {};
-                    if (this.routeData.page.startsWith("menu")) {
-                        if (!this.routeData.date) {
-                            date = this.selectedDay || this.calendar[0].date;
-                            this.set('route.path', '/menu/' + date.year + "-" +
-                                date.month + "-" + date.day);
-                        }
-                        else {
-                            const routeDate = new Date(this.routeData.date);
-                            date.year = routeDate.getFullYear();
-                            date.month = routeDate.getMonth() + 1;
-                            date.day = routeDate.getDate();
-                            this.set('selectedDay', date);
-                        }
-                        this.dispatch('changeCurrentMenu', date);
-                        this.dispatch('changeCurrentOrder', date);
-                    }
-                }
-            }
-
-            _selectDate(e) {
-                const date = new Date(e.target.selected);
-                const newRouteData = {};
-                newRouteData.page = 'menu';
-                newRouteData.date = date.getFullYear() +
-                    "-" + (date.getMonth() + 1) + "-" + date.getDate();
-                this.set('routeData', newRouteData);
-                this.dispatch('changeCurrentMenu', date);
-                this.dispatch('changeCurrentOrder', date);
-            }*/
         }
+
         window.customElements.define(MealOrderMenuContainer.is, MealOrderMenuContainer);
     </script>
 </dom-module>
