--- a/client/user/src/mealorder/menu/meal-order-drawer.html
+++ b/client/user/src/mealorder/menu/meal-order-drawer.html
@@ -206,7 +206,7 @@
             }
 
             _calendarDateChanged() {
-                if (this.routeData.page.startsWith("history")) {
+                if (this.routeData.page && this.routeData.page.startsWith("history")) {
                     const date = new Date(this.outputDate.toString());
                     const newRouteData = {};
                     newRouteData.page = 'history';
