--- a/client/user/src/mealorder/menu/meal-order-menu-container.html
+++ b/client/user/src/mealorder/menu/meal-order-menu-container.html
@@ -155,6 +155,10 @@
                 };
             }
 
+            _dateChanged() {
+                this.dispatch('changeCurrentOrder', this.date);
+            }
+
         }
 
         window.customElements.define(MealOrderMenuContainer.is, MealOrderMenuContainer);
