--- a/client/user/src/mealorder/shell/reducers/reducers.html
+++ b/client/user/src/mealorder/shell/reducers/reducers.html
@@ -101,6 +101,12 @@
             calendar: arrayOfDates,
             menuForDay: [],
 
+            currentDate: {
+                year: 2018,
+                month: 3,
+                day: 21,
+            },
+
             menu: [
                 {
                     vendor: 'Пюре',
